// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Homework Row renders in progress 1`] = `
.c7 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

.c9 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
  border-radius: 50%;
  padding: 2px;
  height: 1.125em;
  width: 1.125em;
  background: #5e5e5e;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 a {
  font-weight: 600;
}

.c3 {
  height: 100%;
  width: 4rem;
  margin-right: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-repeat: no-repeat;
  background-position: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0 6rem 0 1rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 i {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 20rem;
  padding-right: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 15.5rem;
  padding-right: 1rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-right: 1rem;
  width: 8rem;
}

.c8 svg.fa-star {
  padding: 3px;
}

.c0 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
  background: white;
  border-top: 2px solid #f1f1f1;
  -webkit-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
}

.c1 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
  display: contents;
  color: #424242;
}

.c1:hover {
  color: #424242;
}

@media (max-width:600px) {
  .c2 {
    min-width: 100%;
  }
}

@media (max-width:600px) {
  .c4 {
    padding-left: 1.2rem;
  }
}

@media (max-width:600px) {
  .c5 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (max-width:600px) {
  .c8 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (max-width:600px) {
  .c0.c0.c0 {
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    max-height: none;
  }
}

@media (max-width:999px) {
  .c0.c0.c0 {
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    max-height: none;
  }
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        aria-label="Work on homework: distributed integrate infomediaries"
        className="sc-fzqBZW c0 task homework viewable"
        data-event-id={1}
        href="/course/1/task/1"
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <a
          className="sc-fzqBZW c1"
          href="/course/1/task/1"
          onClick={[Function]}
        >
          <div
            className="sc-fznZeY c2"
          >
            <i
              className="c3 icon-homework"
              type="homework"
            />
            <span>
              distributed integrate infomediaries
            </span>
          </div>
          <div
            className="sc-fznZeY c4"
          >
            <time
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              Sat, Oct 14, 12:00am
            </time>
          </div>
          <div
            className="sc-fznZeY c5"
          >
            <div
              className="c6"
            >
              <span
                className="tour-anchor"
                data-tour-anchor-id="assignment-progress-status"
              >
                1/5 completed
              </span>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-exclamation-circle fa-w-16 c7 ox-icon ox-icon-exclamation-circle"
                color="#f4d019"
                data-icon="exclamation-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
        </a>
        <div
          className="sc-fznZeY c8"
        >
          <div
            className="c6"
          >
            <a
              href="/course/1/gradebook"
              onClick={[Function]}
            >
              0
            </a>
            <svg
              aria-hidden="true"
              background="#5e5e5e"
              className="svg-inline--fa fa-star fa-w-18 c9 ox-icon ox-icon-star"
              color="white"
              data-icon="star"
              data-prefix="fas"
              data-variant="circledStar"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 576 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;

exports[`Homework Row renders with completed count 1`] = `
.c8 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
  border-radius: 50%;
  padding: 2px;
  height: 1.125em;
  width: 1.125em;
  background: #5e5e5e;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 a {
  font-weight: 600;
}

.c3 {
  height: 100%;
  width: 4rem;
  margin-right: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-repeat: no-repeat;
  background-position: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0 6rem 0 1rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 i {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 20rem;
  padding-right: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 15.5rem;
  padding-right: 1rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding-right: 1rem;
  width: 8rem;
}

.c7 svg.fa-star {
  padding: 3px;
}

.c0 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
  background: white;
  border-top: 2px solid #f1f1f1;
  -webkit-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
}

.c1 {
  height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #fafafa;
  background: #929292;
  display: contents;
  color: #424242;
}

.c1:hover {
  color: #424242;
}

@media (max-width:600px) {
  .c2 {
    min-width: 100%;
  }
}

@media (max-width:600px) {
  .c4 {
    padding-left: 1.2rem;
  }
}

@media (max-width:600px) {
  .c5 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (max-width:600px) {
  .c7 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (max-width:600px) {
  .c0.c0.c0 {
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    max-height: none;
  }
}

@media (max-width:999px) {
  .c0.c0.c0 {
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    max-height: none;
  }
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        aria-label="Work on homework: customized harness eyeballs"
        className="sc-fzqBZW c0 task homework viewable"
        data-event-id={2}
        href="/course/2/task/2"
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <a
          className="sc-fzqBZW c1"
          href="/course/2/task/2"
          onClick={[Function]}
        >
          <div
            className="sc-fznZeY c2"
          >
            <i
              className="c3 icon-homework"
              type="homework"
            />
            <span>
              customized harness eyeballs
            </span>
          </div>
          <div
            className="sc-fznZeY c4"
          >
            <time
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              Sat, Oct 14, 12:00am
            </time>
          </div>
          <div
            className="sc-fznZeY c5"
          >
            <div
              className="c6"
            >
              <span
                className="tour-anchor"
                data-tour-anchor-id="assignment-progress-status"
              >
                3/12 completed
              </span>
            </div>
          </div>
        </a>
        <div
          className="sc-fznZeY c7"
        >
          <div
            className="c6"
          >
            <a
              href="/course/2/gradebook"
              onClick={[Function]}
            >
              7.0
            </a>
            <svg
              aria-hidden="true"
              background="#5e5e5e"
              className="svg-inline--fa fa-star fa-w-18 c8 ox-icon ox-icon-star"
              color="white"
              data-icon="star"
              data-prefix="fas"
              data-variant="circledStar"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 576 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;
